# caprr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rrwebui.pen
.github/workflows/: ci.yml  release.yml
examples/dioxus-app/: Cargo.toml  Dioxus.toml
examples/dioxus-app/src/: main.rs
examples/plain-html/: index.html  package.json  vite.config.ts
scripts/: vendor-dioxus-assets.mjs
